# MathLib

./: CMakeLists.txt  README.md
gtest/: CMakeLists.txt
include/: linearInterpolate.h
src/: LinearInterpolate.cpp  MathApp.cpp  MathLibExe.cpp  stdafx.cpp
test/: CMakeLists.txt  test.cpp
